--- a/index.html
+++ b/index.html
@@ -40,19 +40,22 @@
 <!-- Quick start -->
 
 <div class="container-fluid">
-	<div class="row h-50 mt-5 mb-3">
+	<div class="row mt-5 mb-5">
 		<div class="col-lg-4 mb-2">
-			<div class="card mx-auto">
-				<img class="mx-auto mt-3" src="images/registration.png" width="128px" >
+			<div class="card text-center">
+				<img class="mx-auto m-3" src="images/registration.png" width="128px" >
 				<div class="card-body">
 					<h5 class="card-title">Зарегистрируйтесь!</h5>
 					<p class="card-text">Для того чтобы начать пользоваться сервисом, зарегистрируйтесь в нем в качестве пассажира, водителя либо предпринимателя.</p>
 				</div>
+				<div class="card-footer bg-success">
+					<a class="text-white align-center" href="registration.html">Зарегистрироваться!</a>
+				</div>
 			</div>
 		</div>
 		<div class="col-lg-4 mb-2">
-			<div class="card mx-auto">
-				<img class="mx-auto mt-3" src="images/route.png" width="128px" >
+			<div class="card text-center">
+				<img class="mx-auto m-3" src="images/route.png" width="128px" >
 				<div class="card-body">
 					<h5 class="card-title">Выберите маршрут!</h5>
 					<p class="card-text">После регистрации в качестве пассажира, Вы сможете выбрать интересующий Вас маршрут, а также выбрать маршрутное такси из списка доступных.</p>
@@ -60,12 +63,52 @@
 			</div>
 		</div>
 		<div class="col-lg-4 mb-2">
-			<div class="card mx-auto">
-				<img class="mx-auto mt-3" src="images/road.png" width="128px" >
+			<div class="card text-center">
+				<img class="mx-auto m-3" src="images/road.png" width="128px" >
 				<div class="card-body">
 					<h5 class="card-title">Путешествуйте!</h5>
-					<p class="card-text">Данный сервис доступен из любой точки Мира.</p>
+					<p class="card-text">Данный сервис доступен из любой точки мира.</p>
 				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
+<!-- Statistics -->
+
+<div class="container-fluid bg-dark text-white">
+	<h5 class="p-2 text-white text-center">Статистика сайта</h5>
+	<div class="row p-3">
+		
+		<div class="col-lg-3 mb-2">
+			<div class="card text-center bg-dark">
+				<img class="mx-auto m-3" src="images/tourist.png" width="128">
+				<div class="card-header">983</div>
+				<div class="card-body">Столько пассажиров зарегистрировано на данный момент времени.</div>
+			</div>
+		</div>
+
+		<div class="col-lg-3 mb-2">
+			<div class="card text-center bg-dark">
+				<img class="mx-auto m-3" src="images/driver.png" width="128">
+				<div class="card-header">321</div>
+				<div class="card-body">Данное количество водителей с комфортом, безопасностью и пунктуальностью везут пассажиров по маршруту.</div>
+			</div>
+		</div>
+
+		<div class="col-lg-3 mb-2">
+			<div class="card text-center bg-dark">
+				<img class="mx-auto m-3" src="images/taxi.png" width="128">
+				<div class="card-header">423</div>
+				<div class="card-body">Данное количество маршрутных такси зарегистрировано в системе.</div>
+			</div>
+		</div>
+
+		<div class="col-lg-3 mb-2">
+			<div class="card text-center bg-dark">
+				<img class="mx-auto m-3" src="images/businessman.png" width="128">
+				<div class="card-header">152</div>
+				<div class="card-body">Столько предпринимателей воспользовались услугами сервиса "Маршрутка"</div>
 			</div>
 		</div>
 	</div>
