--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <div class="container-fluid" id="background_image">
 	<div class="row h-100">
 		<div class="col-sm-12 mr-auto" style="background: rgba(0,0,0,0.5);">
-			<div id="text_info" class="text-success">Сервис "Маршрутка" предназначен для удобного поиска удобного маршрутного такси, а также для предоставления услуг перевозки пассажиров.</div>
+			<div id="text_info" class="text-success">Сервис "Маршрутка" предназначен для удобного поиска маршрутного такси, а также для предоставления услуг перевозки пассажиров.</div>
         </div>
 	</div>
 </div>
@@ -54,7 +54,7 @@
 			</div>
 		</div>
 		<div class="col-lg-4 mb-2">
-			<div class="card text-center">
+			<div class="card text-center" >
 				<img class="mx-auto m-3" src="images/route.png" width="128px" >
 				<div class="card-body">
 					<h5 class="card-title">Выберите маршрут!</h5>
@@ -81,7 +81,7 @@
 	<div class="row p-3">
 		
 		<div class="col-lg-3 mb-2">
-			<div class="card text-center bg-dark">
+			<div class="card text-center bg-dark shadow-lg">
 				<img class="mx-auto m-3" src="images/tourist.png" width="128">
 				<div class="card-header">983</div>
 				<div class="card-body">Столько пассажиров зарегистрировано на данный момент времени.</div>
@@ -89,7 +89,7 @@
 		</div>
 
 		<div class="col-lg-3 mb-2">
-			<div class="card text-center bg-dark">
+			<div class="card text-center bg-dark shadow-lg">
 				<img class="mx-auto m-3" src="images/driver.png" width="128">
 				<div class="card-header">321</div>
 				<div class="card-body">Данное количество водителей с комфортом, безопасностью и пунктуальностью везут пассажиров по маршруту.</div>
@@ -97,7 +97,7 @@
 		</div>
 
 		<div class="col-lg-3 mb-2">
-			<div class="card text-center bg-dark">
+			<div class="card text-center bg-dark shadow-lg">
 				<img class="mx-auto m-3" src="images/taxi.png" width="128">
 				<div class="card-header">423</div>
 				<div class="card-body">Данное количество маршрутных такси зарегистрировано в системе.</div>
@@ -105,7 +105,7 @@
 		</div>
 
 		<div class="col-lg-3 mb-2">
-			<div class="card text-center bg-dark">
+			<div class="card text-center bg-dark shadow-lg">
 				<img class="mx-auto m-3" src="images/businessman.png" width="128">
 				<div class="card-header">152</div>
 				<div class="card-body">Столько предпринимателей воспользовались услугами сервиса "Маршрутка"</div>
