--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Главная страница</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" type="text/css" href="include/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="styles/styles.css">
-	<title>Маршрутка</title>
 </head>
 <body>
 
