--- a/registration.html
+++ b/registration.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Маршрутка: Вход</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" type="text/css" href="include/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="styles/styles.css">
-	<title>Маршрутка</title>
+	<title>Маршрутка: Регистрация</title>
 </head>
 <body>
-
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 	<a class="navbar-brand" href="index.html">Маршрутка</a>
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar_menu">
@@ -27,36 +25,34 @@
 
 <div class="container-fluid">
 	<div class="row h-100">
-		<div class="col-lg-4 mx-auto p-4">
+		<div class="col-lg-5 mx-auto p-4">
 			<div class="card text-center shadow-lg">
 				<div class="card-header">
-					<img src="images/login.png" width="128">
+					<img src="images/adduser.png" width="128">
 				</div>
-				<div class="card-header">
-					Вход в систему
-				</div>
+				<div class="card-header">Быстрая регистрация</div>
 				<div class="card-body">
 					<div class="input-group mb-3">
   						<div class="input-group-prepend">
-    						<span class="input-group-text" id="label_email" style="width: 5em;">E-mail</span>
+    						<span class="input-group-text" style="width: 5em;">E-mail</span>
   						</div>
-  						<input maxlength="30" id="input_login" type="text" class="form-control" aria-describedby="label_email"
-  						data-placement="top">
+  						<input maxlength="30" placeholder="Ваш электронный ящик" id="input_login" type="text" class="input_credentials form-control">
+  						<div class="input-group-append" >
+  							<span class="input-group-text text-white" id="input_login_status" data-placement="top" style="display: none;"></span>
+  						</div>
 					</div>
 					<div class="input-group mb-1">
   						<div class="input-group-prepend">
     						<span class="input-group-text" id="label_password">Пароль</span>
   						</div>
-  						<input id="input_password" type="password" class="form-control" aria-describedby="label_password"
-  						 data-placement="bottom" maxlength="20">
+  						<input id="input_password" type="password" placeholder="Придумайте пароль" class="input_credentials form-control" aria-describedby="label_password" maxlength="20">
+  						<div class="input-group-append">
+  							<span class="input-group-text text-white" id="input_password_status" data-placement="bottom" style="display: none;"></span>
+  						</div>
 					</div>
-					<div class="progress mt-3" id="progress_load" style="display: none">
-  						<div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 100%"></div>
-					</div>
-					<p class="text-danger mb-0 mt-3" id="p_error_login" style="display: none">Неверный email или пароль</p>
 				</div>
-				<div class="card-footer bg-primary">
-					<a id="button_login" class="text-white" href="#">Войти</a>
+				<div class="card-footer bg-success">
+					<a class="text-white" href="#">Зарегистрироваться</a>
 				</div>
 			</div>
         </div>
@@ -67,7 +63,6 @@
 <script src="include/popper.min.js"></script>
 <script src="include/bootstrap.min.js"></script>
 <script src="include/jquery.cookie.js"></script>
-<script src="scripts/login.popovers.js"></script>
-<script src="scripts/login.signin.js"></script>
+<script src="scripts/registration.popovers.js"></script>
 </body>
 </html>
