Fixed bugs in the login & added logout

--- a/account/edit/index.html
+++ b/account/edit/index.html
@@ -56,7 +56,7 @@
 							</div>
 							<input type="tel" class="form-control" maxlength="20" id="input_phone">
 						</div>
-						<div class="input-group mb-3">
+						<div class="input-group">
 							<div class="input-group-prepend">
 								<span class="input-group-text">Адрес</span>
 							</div>
