--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 			</li>
 			
 		</ul>
-		<a class="navbar-nav nav-link text-success" id="button_login" href="account/login/index.html">Войти</a>
+		<a class="navbar-nav nav-link text-success" id="button_login" href="account/login/index.html" style="display: none;">Войти</a>
+		<a class="navbar-nav nav-link text-light" id="button_profile" href="account/index.html" style="display: none;">Профиль</a>
 	</div>
 </nav>
 
@@ -116,5 +117,7 @@
 <script src="include/jquery-3.3.1.slim.min.js"></script>
 <script src="include/popper.min.js"></script>
 <script src="include/bootstrap.min.js"></script>
+<script src="include/jquery.cookie.js"></script>
+<script src="scripts/home.js"></script>
 </body>
 </html>
