--- a/account/index.html
+++ b/account/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" type="text/css" href="../include/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="styles/style.css">
 	<title>Маршрутка: Профиль</title>
 </head>
 <body>
@@ -38,10 +39,11 @@
 
 						<div class="card text-center mb-0 border-0">
 							<div class="card-body">
-								<img src="images/user.png" width="128">
+								<div class="rounded-circle ava m-5 mx-auto" id="avatar"></div>
 							</div>
 							<div class="card-footer">
 								<a href="#" id="button_load_ava">Загрузить фото</a>
+								<input type="file" id="input_file" style="display: none;" />
 							</div>
 						</div>
 
