--- a/account/edit/index.html
+++ b/account/edit/index.html
@@ -54,7 +54,7 @@
 							<div class="input-group-prepend">
 								<span class="input-group-text">Телефон</span>
 							</div>
-							<input type="tel" class="form-control" maxlength="20" id="input_phone">
+							<input type="tel" class="form-control" maxlength="15" id="input_phone">
 						</div>
 						<div class="input-group">
 							<div class="input-group-prepend">
@@ -83,5 +83,6 @@
 <script src="scripts/account.edit.alerts.js"></script>
 <script src="scripts/account.edit.queries.js"></script>
 <script src="scripts/account.edit.js"></script>
+<script src="scripts/account.edit.validator.js"></script>
 </body>
 </html>
