Добавлена погода на главную страницу (для учебы)

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 	<div class="row h-100">
 		<div class="col-sm-12 mr-auto" style="background: rgba(0,0,0,0.5);">
 			<div id="text_info" class="text-success">Сервис "Маршрутка" предназначен для удобного поиска маршрутного такси, а также для предоставления услуг перевозки пассажиров.</div>
+			<div id="weather_info" class="text-success"></div>
         </div>
 	</div>
 </div>
@@ -114,7 +115,7 @@
 	</div>
 </div>
 
-<script src="include/jquery-3.3.1.slim.min.js"></script>
+<script src="include/jquery-3.3.1.min.js"></script>
 <script src="include/popper.min.js"></script>
 <script src="include/bootstrap.min.js"></script>
 <script src="include/jquery.cookie.js"></script>
