--- a/account/edit/index.html
+++ b/account/edit/index.html
@@ -79,7 +79,7 @@
 <script src="../../include/jquery-3.3.1.min.js"></script>
 <script src="../../include/popper.min.js"></script>
 <script src="../../include/bootstrap.min.js"></script>
-<script src="../../include/jquery.cookie.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
 <script src="scripts/account.edit.alerts.js"></script>
 <script src="scripts/account.edit.queries.js"></script>
 <script src="scripts/account.edit.js"></script>
