--- a/account/login/index.html
+++ b/account/login/index.html
@@ -65,7 +65,7 @@
 <script src="../../include/jquery-3.3.1.min.js"></script>
 <script src="../../include/popper.min.js"></script>
 <script src="../../include/bootstrap.min.js"></script>
-<script src="../../include/jquery.cookie.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
 <script src="scripts/login.popovers.js"></script>
 <script src="scripts/login.signin.js"></script>
 </body>
